# webp-perf

./: Cargo.toml  README.md
benches/: basic_images.rs  lossy_images.rs
images/: images.md
reports/lossless_2025_10_07/: index.html
reports/lossy_2025_10_05/: index.html
src/: main.rs
src/arithmetic_decoder/: image_webp.rs  libwebp.c  mod.rs  simple.rs
src/transforms/: image_webp.rs  libwebp.c  mod.rs
